<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_001_browser"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_002_search"
        android:title="@string/discover" />
    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_video"
        android:title="@string/Add" />
    <item
        android:id="@+id/navigation_live"
        android:icon="@drawable/ic_004_record"
        android:title="@string/live" />
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user"
        android:title="@string/myaccount" />

</menu>
