<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".Activity.Myaccount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:weightSum="1"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/close"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight=".10"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:layout_weight=".90"
                    android:gravity="center"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="My profile"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center|top"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/userphoto"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:civ_border_color="@color/start"
                        app:civ_border_overlay="true"
                        app:civ_border_width="1dp" />
                </FrameLayout>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dislay_name"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_no"
                    android:inputType="number"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/aboutme"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:gravity="start"
                    android:hint="@string/aboutuser"
                    android:inputType="text"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/save_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btnback"
                    android:backgroundTint="@color/start"
                    android:text="@string/save"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>