<?xml version="1.0" encoding="utf-8"?>
<layout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="layout/activity_o_t_p_0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left|center_vertical|center_horizontal|center|start"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensens"
            android:text="@string/put_otp_and_verify"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/enter_otp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/edtotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="6"
            android:textIsSelectable="false"
            android:textSize="16sp"
            app:pinLineColors="@color/colorAccent"
            app:pinLineStroke="0.5dp"
            app:pinLineStrokeSelected="1dp"
            app:pinTextBottomPadding="10dp" />

        <ImageView
            android:id="@+id/btnsubmit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@drawable/shape_circle"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_semibold"
            android:text="Don&apos;t get Otp ?"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnresend"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/btnback"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/resend"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
</layout>
