<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="layout/activity_login_0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/lanuage_shape_activate"
            android:backgroundTint="#33548a"
            android:elevation="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/login_in_your_account"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/entermobioe"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mobileno"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:fontFamily="@font/opensans_regular"
                android:hint="@string/mobile_no"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btnotp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btnback"
                android:fontFamily="@font/roboto_black"
                android:text="@string/get_otp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/continuewith"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_margin="20dp"
                android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/facebook"
                android:layout_width="0dp"
                android:layout_weight=".45"
                android:layout_height="wrap_content"
                android:background="@drawable/btnback"
                android:backgroundTint="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_facebook" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/opensans_regular"
                    android:text="facebook"
                    android:textColor="#33548a"
                    android:textSize="16sp" />
            </LinearLayout>


            <com.facebook.login.widget.LoginButton
                android:id="@+id/loginbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".10"/>

            <LinearLayout
                android:id="@+id/google"
                android:layout_width="0dp"
                android:layout_weight=".45"
                android:layout_height="wrap_content"
                android:background="@drawable/btnback"
                android:backgroundTint="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/opensans_regular"
                    android:text="Google"
                    android:textColor="#33548a"
                    android:textSize="16sp" />
            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>