<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:tag="layout/activity_post_0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:tag="layout/fragmentprofile_0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="?actionBarSize"
      >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:background="@drawable/lanuage_shape">

                <ImageView
                    android:id="@+id/covar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/setting"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="top|right|center_vertical|center_horizontal|center|end"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:padding="5dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/black"
                    app:srcCompat="@drawable/ic_baseline_settings_24" />
            </FrameLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-60dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userphoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_man"
                app:civ_border_color="#BF1ACA"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/white" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:hint="@string/dislay_name"
                android:minWidth="200dp"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/dname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:weightSum="0.75">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/followers"
                    android:textColor="#F608AE"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fllowrs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_regular"
                    android:textColor="#F608AE"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/following"
                    android:textColor="#BF1ACA"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/foolwings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_regular"
                    android:textColor="#BF1ACA"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/total_likes"
                    android:textColor="#532BFB"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_regular"
                    android:textColor="#532BFB"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicator="@color/white"
            app:tabIndicatorColor="@color/white"
            app:tabIndicatorHeight="1dp"
            app:tabMode="fixed"
            android:background="#33548a"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:tabTextColor="@color/white" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:nestedScrollingEnabled="true"
            android:layout_below="@+id/tabLayout"
            android:layout_centerInParent="true" />
    </LinearLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>